tests/errors/arity-too-few/main.pa
def add = fun a b {
	a + b
}

def main = add 1
